--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Cge\\MappingTool\\": "src/"
+            "Cge\\MappingTool\\": "include/"
         }
     },
     "authors": [
