--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "mapping-tool",
-  "version": "1.0.0",
-  "description": "",
-  "main": "",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "sass --no-source-map --style=compressed assets/sass:./assets",
-    "watch-sass": "sass --watch --update --style=expanded assets/sass:./assets",
-    "browser-sync": "browser-sync start --no-open --proxy 'zza.local' --files \"**/*,!sass/**/*.scss\"",
-    "watch-sync": "concurrently --kill-others \"npm run watch-sass\" \"npm run browser-sync\""
+    "dev": "vite",
+    "build": "vite build --watch",
+    "preview": "vite preview"
   },
-  "author": "Slava",
-  "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.29.1",
-    "concurrently": "^8.0.1",
-    "sass": "^1.62.1"
+    "vite": "^5.3.1"
+  },
+  "dependencies": {
+    "alpinejs": "^3.14.1",
+    "d3kit-timeline": "^2.0.1"
   }
 }
